fixed win banner on small screens

--- a/client/src/components/Arena.module.css
+++ b/client/src/components/Arena.module.css
@@ -25,19 +25,36 @@
 }
 
 .winnerText {
+  display: flex;
   position: absolute;
-  top: 85px;
-  right: 5px;
-  left: 5px;
-  height: 150px;
+  top: 15.178571428571427%; /* 85px */
+  right: 0.8928571428571428%; /* 5px */
+  left: 0.8928571428571428%; /* 5px */
+  align-items: center;
+  justify-content: center;
+  height: 26.785714285714285%; /* 150px */
   border: 3px solid var(--blue);
   border-radius: 15px;
   background: var(--darkaqua-transparent);
   font-size: 3.5rem;
   font-weight: bold;
-  line-height: 150px;
   text-align: center;
   white-space: pre;
+}
+@media (max-width: 600px) {
+  .winnerText {
+    font-size: 2.8rem;
+  }
+}
+@media (max-width: 500px) {
+  .winnerText {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 450px) {
+  .winnerText {
+    font-size: 2rem;
+  }
 }
 
 .startButton {
